# jakal_work_2

./: .gitignore  README.md  pyproject.toml
config/: experiment.example.json  jakal-flow-target.json  jakal-flow.paths.psd1
config/profiles/: jakal-flow-local.json
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.jsx
docs/: ARCHITECTURE.md
scripts/: common.ps1  profile-common.ps1
scripts/lib/: TestWorkspace.ps1
src/jakal_flow/: __init__.py
tests/: test_bootstrap_scripts.py  test_environment_contract.py  test_harness_contract.py  test_sample_profile_fixture.py  test_workspace_contract.py  test_workspace_shell_contracts.py
